[package]
name = "language-setup"
version = "0.1.0"
authors = ["Hyundeok Park <p.hyundeok76@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
description = "Set up environments for programming languages"
documentation = ""
readme = "README.md"
homepage = "https://github.com/airglow923/language-setup"
repository = "https://github.com/airglow923/language-setup.git"
license = ""
license-file = "LICENSE"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = ">= 0.8.0"
